<resources>
    <string name="app_name">LINGApp</string>
    <string name="login">Login</string>
    <string name="signup">sign up</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="forgotten_password">forgotten password?</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="progress">10%</string>
    <string name="banner">image of a diet plan</string>
    <string name="prompt">Hi, Welcome to LINGApp!</string>
    <string name="button_prompt">Let\'s Get Started</string>
    <string name="name_prompt">How do we call you?</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="surname">Surname</string>
    <string name="bmi_prompt">What is your current height and weight?</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="age_prompt">How old are you?</string>
    <string name="birthday_sample">03/28/02</string>
    <string name="sample_age">15</string>
    <string name="gender_prompt">What is your gender?</string>
    <string name="male_icon">male icon</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="credentials_prompt">Almost done…</string>
    <string name="email">Enter Email</string>
    <string name="next">Next</string>
    <string name="header_prompt">Tell us about yourself</string>
    <string name="validate">validate</string>
    <string name="loading_screen_prompt">loading screen</string>
    <string name="home_fragment">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="restaurant">Meal Plan</string>
    <string name="edit">Edit</string>
    <string name="educational_resources">Educational Resources</string>
    <string name="menu">menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">image of the item</string>
    <string name="DYK_TEMPLATE">Did you know?</string>
    <string name="short_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a ipsum et dui varius congue. Suspendisse convallis enim congue egestas faucibus.</string>
    <string name="day_1_template">Day 1</string>
    <string name="day_2_template">Day 2</string>
    <string name="day_3_template">Day 3</string>
    <string name="day_4_template">Day 4</string>
    <string name="day_5_template">Day 5</string>
    <string name="day_6_template">Day 6</string>
    <string name="greetings_template">Good Morning!</string>
    <string name="daily_reminder">Here is your daily reminder that. What you eat, is what you are!</string>
    <string name="sun">picture of sun</string>
    <string name="greetings_template1">Hi, Peleboykulot!</string>
    <string name="title_template">Weekly Progress</string>
    <string name="calories_template">Calories</string>
    <string name="sample_cal">9,034</string>
    <string name="latest_measurement">Latest Measurement</string>
    <string name="carbs_icon">carbs icon</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="sample_value">90g</string>
    <string name="protein">Proteins</string>
    <string name="calories">Calories</string>
    <string name="lorem_title">Lorem Ipsum</string>
    <string name="pizza_icon">pizza icon</string>
    <string name="body_mass_index">BODY MASS INDEX</string>
    <string name="sample_bmi">22.8</string>
    <string name="sample_scale">Normal</string>
    <string name="underweight">Under\nweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Over\nWeight</string>
    <string name="obese">Obeses</string>
    <string name="extremely_obese">Extremly\nObese</string>
    <string name="manage_account">manage account</string>
    <string name="person_search">person search</string>
    <string name="fat">Fat</string>
    <string name="carbs">carbs</string>
    <string name="pro">pro</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="age">Age</string>
    <string name="sample_weight">58</string>
    <string name="sample_height">160</string>
    <string name="calculate">CALCULATE</string>
    <string name="invalid_template">INVALID LOREM IPSUM</string>
    <string name="invalid_warning">Lorem Ipsum Dolor Sit Ammet Sans Scrit. Proin a ipsum et dui varius congue.</string>
    <string name="okay">Okay</string>
    <string name="bmi_result">BMI Result</string>
    <string name="classification_normal">YOU ARE NORMAL</string>
    <string name="classification_underweight">YOU ARE UNDERWEIGHT</string>
    <string name="classification_overweight">YOU ARE OVERWEIGHT</string>
    <string name="classification_obese">YOU ARE OBESE</string>
    <string name="classification_extremely_obese">YOU ARE EXTREMELY OBESE</string>

    <string name="classification_title_normal">What is being normal?</string>
    <string name="classification_title_underweight">What is being underweight?</string>
    <string name="classification_title_obese">What is being obese?</string>
    <string name="classification_title_extremely_obese">What is being extremely obese</string>
    <string name="classification_title_overweight">What is being overweight</string>

    <string name="classification_description_normal">Being in the \"normal weight\" category according to BMI (Body Mass Index) means that your BMI falls within the range of 18.5 to 24.9. This classification is often considered a healthy weight range for most adults. If your BMI falls within this range, it suggests that your weight is proportionate to your height, which is associated with a lower risk of various health issues related to being underweight or overweight.</string>
    <string name="intake_status">Intake Status</string>
    <string name="sample_month">Jan</string>
    <string name="sample_year">2024</string>
    <string name="bmi_record">BMI Record</string>
    <string name="sample_date">01-15-24</string>
    <string name="status">Status</string>
    <string name="filter">filter</string>
    <string name="breakfast">Breakfast</string>
    <string name="long_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In non rutrum metus. Duis rhoncus leo sed elit bibendum mollis. Suspendisse pellentesque tortor nulla, eu blandit purus semper ut. Donec tristique, tellus eu mollis blandit, dolor nulla consectetur lorem, non euismod ipsum lacus at arcu. Suspendisse viverra convallis sollicitudin.</string>
    <string name="calories_sample">350 Kcal</string>
    <string name="fats">Fats</string>
    <string name="sample">0 g</string>
    <string name="allergen_information">Allergen Information:</string>
    <string name="allergen_information_sample">Contains egg, gluten, and milk</string>
    <string name="snack">Snack</string>
    <string name="lunch">Lunch</string>
    <string name="add_meal">Add Meal</string>
    <string name="dinner">Dinner</string>
    <string name="total">Total</string>
    <string name="educational_template">picture of the item</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="very_long_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In non rutrum metus. Donec tristique, tellus eu mollis blandit, dolor nulla consectetur lorem, non euismod ipsum lacus at arcu. Suspendisse viverra convallis sollicitudin. Morbi molestie gravida eros, eu tempor orci aliquet vel. Proin a nunc non diam lacinia vehicula. Aliquam at dui rutrum, sagittis mauris sit amet, posuere metus. In nibh sapien, condimentum nec risus et, egestas congue mauris. Fusce tincidunt facilisis lorem quis dictum. Aliquam non sagittis ex. Proin erat urna, consequat nec egestas in, malesuada ut sem. Ut dui lacus, dictum eu diam ut, blandit lacinia mauris.\n\nPraesent ultrices laoreet congue. In ut purus porta, sagittis elit vel, tempor massa. Quisque rhoncus lectus eget purus dapibus pulvinar. Integer pulvinar enim non nulla facilisis, placerat viverra diam condimentum. Phasellus id malesuada magna. Vestibulum sit amet porttitor felis. Morbi lacinia quam augue, eget consequat nunc euismod non. Sed ullamcorper dolor sit amet sagittis bibendum.</string>
    <string name="create">create</string>
    <string name="sample_name">Julius Andrie Antonio</string>
    <string name="sample_email">juliusandrie28@gmail.com</string>
    <string name="keep_in_touch">Keep in touch!</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="logout">logout</string>
    <string name="say_cheese">Say Cheese!!!</string>
    <string name="profile_picture">profile_picture</string>
    <string name="no_image_selected">No image selected!</string>
    <string name="meal_added">Meal Added</string>
    <string name="message">Message</string>
    <string name="message_body">Type your message here…</string>
    <string name="send">send</string>
    <string name="update_user">Update User Status</string>
    <string name="note_prompt">changes will be permanently applied until 30days. \nMake sure that the provided information is correct.</string>
    <string name="change_username">Username</string>
    <string name="change_email">Email</string>
    <string name="change_password">Password</string>
    <string name="save">save</string>
    <string name="confirm_password">confirm password</string>
    <string name="current_password">current password</string>
    <string name="update">Update Information</string>
    <string name="update_information">Update Information</string>
    <string name="subject">Type subject here</string>
    <string name="subject_template">Subject</string>
    <string name="lingapp_description">LINGApp(Localized Interactive Nutrient-based Growth Application for Pediatrics) encourages healthy living by giving an appropriate meal plan for the parents that is beneficial to the nutritional needs of their child. Our vision is to create a user-friendly mobile application that allows parents to monitor the dietary status of the health and well-being of their children with ease and accuracy. The application will be able to determine the dietary status of their child based on the children\'s given BMI and from the acquired information, the application will provide a concrete meal plan to assist the parents and offer a helpful guide and personalized recommendations on how to obtain proper nourishment for their child.</string>
    <string name="good_afternoon">Good Afternoon!</string>
    <string name="good_evening">Good Evening!</string>
    <string name="forgot_password_prompt">Forgot Password</string>
    <string name="tem">Click here to learn more...</string>
</resources>