<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:background="@drawable/rounded_border_only"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_marginBottom="20dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_date"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_marginEnd="10dp">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    />

                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:background="@drawable/rounded_text"
                    android:textAlignment="center"
                    android:padding="10dp"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    />

                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_height"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:background="@drawable/rounded_text"
                    android:textAlignment="center"
                    android:padding="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    />

                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_weight"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:background="@drawable/rounded_text"
                    android:textAlignment="center"
                    android:padding="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/actionImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/male_normal"
            android:layout_weight="1"
            android:contentDescription="@string/normal"
            />
    </LinearLayout>

</LinearLayout>