<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightPrimary"
    android:padding="20dp">
    
    <ImageView
        android:id="@+id/profilePic"
        android:contentDescription="@string/image_description"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/iu_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/sample_name"
            />

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/sample_email"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>