<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContactUs.ContactUsActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightPrimary"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:visibility="visible"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contact_us"
            android:textColor="@color/light"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/message"
        android:layout_margin="10dp"
        android:contentDescription="@string/message"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_template"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp">
        <EditText
            android:drawablePadding="10dp"
            android:hint="@string/subject"
            android:textColorHint="@color/dark"
            android:id="@+id/subjectET"
            android:autofillHints="username"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_border_only"
            android:layout_height="60dp"
            android:singleLine="true"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:hintEnabled="false"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <EditText
            android:drawablePadding="10dp"
            android:hint="@string/message_body"
            android:textColorHint="@color/dark"
            android:id="@+id/messageET"
            android:autofillHints="username"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_border_only"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:paddingTop="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="top"
            android:maxLines="7"
            android:maxLength="300"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:id="@+id/send"
        app:backgroundTint="@color/lightPrimary"
        />

</LinearLayout>