<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomePage.Fragments.History.HistoryFragment"
    android:padding="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/sample_month"
                android:textColor="@color/white"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                app:drawableTint="@color/white"
                android:drawablePadding="10dp"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_down_24"
                android:id="@+id/monthFilter"
                />
            <TextView
                android:id="@+id/yearFilter"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/sample_year"
                android:textColor="@color/white"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                app:drawableTint="@color/white"
                android:drawablePadding="10dp"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_down_24" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_only"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intake_status"
                android:textColor="@color/dark"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                />
            <com.github.mikephil.charting.charts.BarChart
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/barChart"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bmi_record"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_downward"
                android:contentDescription="@string/filter"
                android:id="@+id/filter"
                />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerView"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false"
            android:visibility="invisible"
            />
        <include layout="@layout/empty_card_template"/>
    </LinearLayout>
    
</androidx.core.widget.NestedScrollView>